✅ feat: new ReportController::storeTemporaryProof
